frontend: prevents jumping of header sync

--- a/frontends/web/src/components/headerssync/headerssync.css
+++ b/frontends/web/src/components/headerssync/headerssync.css
@@ -1,7 +1,7 @@
 .syncContainer {
-    position: relative;
+    position: absolute;
     width: 100%;
-    top: 0;
+    top: -22px;
 }
 
 .progressBar {
@@ -24,7 +24,7 @@
     font-size: var(--size-small);
     color: var(--color-secondary);
     text-align: right;
-    margin: 2px auto 0 auto;
+    margin: 2px auto;
     padding: 0 var(--spacing-large);
 }
 
