--- a/frontends/web/src/style/layout.css
+++ b/frontends/web/src/style/layout.css
@@ -66,10 +66,10 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    width: 100%;
-    /* min-height: calc(100% - var(--header-height)); */
-    margin: 0 auto;
     justify-content: flex-start;
+    margin: 0 auto;
+    position: relative;
+    width: 100%;
 }
 
 .fluid {
@@ -86,8 +86,7 @@
 
 .headerContainer {
     background-color: var(--color-white);
-    /* min-height: var(--header-height); */
-    border-bottom: 1px solid #eee;
+    border-bottom: 2px solid #eee;
     width: 100%;
 }
 
